--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,21 +1,16 @@
 /* Application-wide Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+.ewypowiedzenia-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
+
+.ewypowiedzenia-full-width {
+  width: 100%;
 }
-body {
-  margin: 2em;
-}
-body, input[text], button {
-  color: #888;
-  font-family: Cambria, Georgia;
-}
+
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
