--- a/frontend/src/app/dismissal-notice/dismissal-notice.component.html
+++ b/frontend/src/app/dismissal-notice/dismissal-notice.component.html
@@ -1,44 +1,44 @@
 <div class="container">
   <form #dismissalNoticeForm="ngForm" class="ewypowiedzenia-form">
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="firstName" required [(ngModel)]="dismissalNotice.firstName" placeholder="First name">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.firstName" name="firstName" placeholder="First name">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="lastName" required [(ngModel)]="dismissalNotice.lastName" placeholder="Last name">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.lastName" name="lastName" placeholder="Last name">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="homeAddressStreet" required [(ngModel)]="dismissalNotice.homeAddress.street" placeholder="Street">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.homeAddress.street" name="homeAddressStreet" placeholder="Street">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="homeAddressPostalCode" required [(ngModel)]="dismissalNotice.homeAddress.postalCode" placeholder="Postal code">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.homeAddress.postalCode" name="homeAddressPostalCode" placeholder="Postal code">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="homeAddressCity" required [(ngModel)]="dismissalNotice.homeAddress.city" placeholder="City">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.homeAddress.city" name="homeAddressCity" placeholder="City">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="companyName" required [(ngModel)]="dismissalNotice.companyName" placeholder="Company name">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.companyName" name="companyName" placeholder="Company name">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="companyAddressStreet" required [(ngModel)]="dismissalNotice.companyAddress.street" placeholder="Street">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.companyAddress.street" name="companyAddressStreet" placeholder="Street">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="companyAddressPostalCode" required [(ngModel)]="dismissalNotice.companyAddress.postalCode" placeholder="Postal code">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.companyAddress.postalCode" name="companyAddressPostalCode" placeholder="Postal code">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="companyAddressCity" required [(ngModel)]="dismissalNotice.companyAddress.city" placeholder="City">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.companyAddress.city" name="companyAddressCity" placeholder="City">
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-      <input matInput [matDatepicker]="agreementDatePicker" required [(ngModel)]="dismissalNotice.agreementDate" placeholder="Agreement date">
+      <input matInput [matDatepicker]="agreementDatePicker" required [(ngModel)]="dismissalNotice.agreementDate" name="agreementDate" placeholder="Agreement date">
       <mat-datepicker-toggle matSuffix [for]="agreementDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #agreementDatePicker></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-      <input matInput [matDatepicker]="dismissalDatePicker" required [(ngModel)]="dismissalNotice.dismissalDate" placeholder="Dismissal date">
+      <input matInput [matDatepicker]="dismissalDatePicker" required [(ngModel)]="dismissalNotice.dismissalDate" name="dismissalDate" placeholder="Dismissal date">
       <mat-datepicker-toggle matSuffix [for]="dismissalDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #dismissalDatePicker></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="ewypowiedzenia-full-width">
-        <input matInput class="form-control" name="dismissalPlace" required [(ngModel)]="dismissalNotice.dismissalPlace" placeholder="Dismissal place">
+        <input matInput class="form-control" required [(ngModel)]="dismissalNotice.dismissalPlace" name="dismissalPlace" placeholder="Dismissal place">
     </mat-form-field>
     <button mat-raised-button [disabled]="!dismissalNoticeForm.valid" (click)="generate(dismissalNotice)">Generate</button>
   </form>
